--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 # vim: fdm=marker foldlevelstart=0
 # {{{ misc
+# shell
+set-option -g default-shell /bin/zsh
+
 # remap prefix from "C-b" to "C-a"
 unbind C-b
 set-option -g prefix C-a
@@ -29,61 +32,96 @@ setw -g pane-base-index 1
 # don't rename windows, idk if it even still does that
 set-option -g allow-rename off
 
+set -g renumber-windows on
+
 set -g focus-events on
 # }}}
 # {{{ look
 
-# modes
-setw -g clock-mode-colour colour5
-setw -g mode-attr bold
-setw -g mode-fg colour1
-setw -g mode-bg colour18
+# following taken from github.com/erikschreier/PaperColor-themes
+# separator characters
+#
+ArRt=""
+ArLt=""
 
-# panes
-set -g pane-border-bg colour0
-set -g pane-border-fg colour19
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour9
+# separators left side
+#
+LbLt="#[fg=colour236,bg=colour234]$ArRt"
+OmLs="#[fg=colour234,bg=colour208]$ArRt"
+OmRs="#[fg=colour208,bg=colour236]$ArRt"
+GmLs="#[fg=colour234,bg=colour148]$ArRt"
+GmRs="#[fg=colour148,bg=colour236]$ArRt"
+AqLs="#[fg=colour234,bg=colour037]$ArRt"
+AqRs="#[fg=colour037,bg=colour234]$ArRt"
 
-# status bar
-# set -g status-position bottom
-# set -g status-justify left
-# set -g status-bg colour18
-# set -g status-fg colour137
-# set -g status-attr dim
-# set -g status-left ''
-# set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
-# set -g status-right-length 50
-# set -g status-left-length 20
+# separators right side
+#
+LbRt="#[fg=colour236,bg=colour234]$ArLt"
+YmLs="#[fg=colour214,bg=colour236]$ArLt"
+YmRs="#[fg=colour234,bg=colour214]$ArLt"
+PmLs="#[fg=colour205,bg=colour236]$ArLt"
+PmRs="#[fg=colour234,bg=colour205]$ArLt"
 
-# windows
-setw -g window-status-current-fg colour1
-setw -g window-status-current-bg colour19
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+# colors for marker labels (colored bg, black fg)
+#
+MkOr="#[fg=colour234,bg=colour208,bold]"
+MkGn="#[fg=colour234,bg=colour148,bold]"
+MkYe="#[fg=colour234,bg=colour214,bold]"
+MkBl="#[fg=colour234,bg=colour074,bold]"
+MkPu="#[fg=colour234,bg=colour205,bold]"
+MkAq="#[fg=colour234,bg=colour037,bold]"
 
-setw -g window-status-fg colour9
-setw -g window-status-bg colour18
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# colors for status labels (colored fg, black bg)
+#
+LbOr="#[fg=colour208,bg=colour236,nobold]"
+LbGn="#[fg=colour148,bg=colour236,nobold]"
+LbYe="#[fg=colour214,bg=colour236,nobold]"
+LbBl="#[fg=colour074,bg=colour236,nobold]"
+LbPu="#[fg=colour205,bg=colour236,nobold]"
+LbAq="#[fg=colour037,bg=colour236,nobold]"
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+# left side of the statusbar
+#
+StLt="$AqLs$MkAq #S $AqRs"                            # session name
+WnSC="$GmLs$MkGn #I $GmRs$LbGn #W#F $LbLt"            # active window
+WnSt="$OmLs$MkOr #I $OmRs$LbOr #W#F $LbLt"            # passive window
 
-# messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour16
+# right side of the statusbar
+#
+DtTm="$LbRt$LbYe %a %-d. %B %Y $YmLs$MkYe %H:%M $YmRs"# date     | time
+HsWh="$LbRt$LbPu #h $PmLs$MkPu #(whoami) $PmRs"       # hostname | username
+StRt="$DtTm$HsWh"                                     # build right side
+
+# statusbar settings
+#
+set -g pane-active-border-bg default                  # we dont want to see
+set -g pane-active-border-fg colour148                # border for splits a
+set -g pane-border-bg default                         # we dont want to see
+set -g pane-border-fg colour214                       # border for splits p
+set -g message-fg colour148                           # messagebar fg
+set -g message-bg colour234                           # messagebar bg
+set -g status-justify left                            # place window list left
+set -g status-bg colour234                            # statusbar itself
+set -g status-fg colour000                            # statusbar itself
+
+# print left side of the statusbar
+#
+setw -g status-left-length 10                         # max len of sessionname
+setw -g status-left $StLt                             # sessionname
+setw -g window-status-separator ""                    # space between windows
+setw -g window-status-current-format $WnSC            # active window status
+setw -g window-status-format $WnSt                    # passive windows status
+
+# print right side of the statusbar
+#
+set -g status-right-length 100                        # max len of the info
+set -g status-right $StRt                             # date|time - host|userurface_powerline
+
 
 # }}}
 # {{{ mouse and scrolling
 # mouse
 set-option -g mouse on
-
-# copy with mouse
-#setw -g mode-mouse on
-#set -g mouse-select-window on
 
 # scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -117,15 +155,20 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # }}}
+# {{{ multi screen stuff
+set-option -g set-titles on
+set-option -g set-titles-string "tmux-#S"
+bind-key Tab run "bash ~/.tmux/switch-tmux-windows.sh"
+# }}}
 # {{{ tpm plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @continuum-restore 'on'
 # }}}
 run -b '/home/petran/.tmux/plugins/tpm/tpm'
-# source-file ~/.tmux/default-session
 # vim: set shiftwidth=4 softtabstop=4 expandtab tw=120 foldlevel=0
 
