--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,7 @@ set -g renumber-windows on
 set -g focus-events on
 # }}}
 # {{{ look
+source ~/.config/tmux/everforest-light.tmux.conf
 
 # following taken from github.com/erikschreier/PaperColor-themes
 # separator characters
@@ -169,9 +170,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'jimeh/tmux-themepack'
+# set -g @plugin 'jimeh/tmux-themepack'
 # }}}
-set -g @themepack 'powerline/block/cyan'
+# set -g @themepack 'powerline/block/cyan'
 run -b '/home/petran/.tmux/plugins/tpm/tpm'
 # vim: set shiftwidth=4 softtabstop=4 expandtab tw=120 foldlevel=0
 
