--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,9 @@ set-option -g mouse on
 
 # 256 colors
 set -g default-terminal "screen-256color"
-set -sa terminal-overrides ",*256col*:Tc"
+# one of the following is redundant, but it depends on tmux version
+set -ga terminal-overrides ",*:Tc"
+set -sa terminal-features ",*:RGB"
 
 # scrolling
 set -ga terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -43,112 +45,6 @@ set -g renumber-windows on
 
 set -g focus-events on
 # }}}
-# {{{ look
-source ~/.config/tmux/everforest-light.tmux.conf
-
-# following taken from github.com/erikschreier/PaperColor-themes
-# separator characters
-#
-#ArRt=""
-#ArLt=""
-
-## separators left side
-##
-#LbLt="#[fg=colour236,bg=colour234]$ArRt"
-#OmLs="#[fg=colour234,bg=colour208]$ArRt"
-#OmRs="#[fg=colour208,bg=colour236]$ArRt"
-#GmLs="#[fg=colour234,bg=colour148]$ArRt"
-#GmRs="#[fg=colour148,bg=colour236]$ArRt"
-#AqLs="#[fg=colour234,bg=colour037]$ArRt"
-#AqRs="#[fg=colour037,bg=colour234]$ArRt"
-
-## separators right side
-##
-#LbRt="#[fg=colour236,bg=colour234]$ArLt"
-#YmLs="#[fg=colour214,bg=colour236]$ArLt"
-#YmRs="#[fg=colour234,bg=colour214]$ArLt"
-#PmLs="#[fg=colour205,bg=colour236]$ArLt"
-#PmRs="#[fg=colour234,bg=colour205]$ArLt"
-
-## colors for marker labels (colored bg, black fg)
-##
-#MkOr="#[fg=colour234,bg=colour208,bold]"
-#MkGn="#[fg=colour234,bg=colour148,bold]"
-#MkYe="#[fg=colour234,bg=colour214,bold]"
-#MkBl="#[fg=colour234,bg=colour074,bold]"
-#MkPu="#[fg=colour234,bg=colour205,bold]"
-#MkAq="#[fg=colour234,bg=colour037,bold]"
-
-## colors for status labels (colored fg, black bg)
-##
-#LbOr="#[fg=colour208,bg=colour236,nobold]"
-#LbGn="#[fg=colour148,bg=colour236,nobold]"
-#LbYe="#[fg=colour214,bg=colour236,nobold]"
-#LbBl="#[fg=colour074,bg=colour236,nobold]"
-#LbPu="#[fg=colour205,bg=colour236,nobold]"
-#LbAq="#[fg=colour037,bg=colour236,nobold]"
-
-## left side of the statusbar
-##
-#StLt="$AqLs$MkAq #S $AqRs"                            # session name
-#WnSC="$GmLs$MkGn #I $GmRs$LbGn #W#F $LbLt"            # active window
-#WnSt="$OmLs$MkOr #I $OmRs$LbOr #W#F $LbLt"            # passive window
-
-## right side of the statusbar
-##
-## DtTm="$LbRt$LbYe %a %-d. %B %Y $YmLs$MkYe %H:%M $YmRs"# date     | time
-#DtTm="$LbRt$LbYe %a %-d. %B %Y $YmLs$MkYe %H:%M" # date     | time
-## HsWh="$LbRt$LbPu #h $PmLs$MkPu #(whoami) $PmRs"       # hostname | username
-#HsWh="$LbPu #h $PmLs$MkPu #(whoami) $PmRs"       # hostname | username
-#BatPow="#[fg=colour037,bg=colour214]$ArLt$MkAq#{battery_icon} #{battery_percentage}#[fg=colour236,bg=colour037]$ArLt"
-#StRt="$DtTm$BatPow$HsWh"                                     # build right side
-
-## statusbar settings
-##
-## set -g pane-active-border-bg default                  # we dont want to see
-## set -g pane-active-border-fg colour148                # border for splits a
-## set -g pane-border-bg default                         # we dont want to see
-## set -g pane-border-fg colour214                       # border for splits p
-## set -g message-fg colour148                           # messagebar fg
-## set -g message-bg colour234                           # messagebar bg
-#set -g status-justify left                            # place window list left
-#set -g status-bg colour234                            # statusbar itself
-#set -g status-fg colour000                            # statusbar itself
-
-## print left side of the statusbar
-##
-#setw -g status-left-length 10                         # max len of sessionname
-#setw -g status-left $StLt                             # sessionname
-#setw -g window-status-separator ""                    # space between windows
-#setw -g window-status-current-format $WnSC            # active window status
-#setw -g window-status-format $WnSt                    # passive windows status
-
-## print right side of the statusbar
-##
-#set -g status-right-length 100                        # max len of the info
-#set -g status-right $StRt                             # date|time - host|userurface_powerline
-
-
-# }}}
-# {{{ vim related
-# replaced by plugin vim-tmux-navigator
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-# bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-# bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-# bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-# bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# bind-key -T copy-mode-vi C-h select-pane -L
-# bind-key -T copy-mode-vi C-j select-pane -D
-# bind-key -T copy-mode-vi C-k select-pane -U
-# bind-key -T copy-mode-vi C-l select-pane -R
-# bind-key -T copy-mode-vi C-\ select-pane -l
-
-
-# }}}
 # {{{ copy mode integration
 # vim bindings in copy mode
 setw -g mode-keys vi
@@ -158,21 +54,28 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # }}}
-# {{{ multi screen stuff
-set-option -g set-titles on
-set-option -g set-titles-string "tmux-#S"
-bind-key Tab run "bash ~/.tmux/switch-tmux-windows.sh"
-# }}}
 # {{{ tpm plugins
 set -g @plugin 'tmux-plugins/tpm'
+
+# session
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-battery'
+
+# theme
+set -g @plugin 'nordtheme/tmux'
+# set -g @plugin 'trevarj/tmux-open-nvim'
 # set -g @plugin 'jimeh/tmux-themepack'
 # }}}
 # set -g @themepack 'powerline/block/cyan'
 run -b '/home/petran/.tmux/plugins/tpm/tpm'
-# vim: set shiftwidth=4 softtabstop=4 expandtab tw=120 foldlevel=0
 
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-strategy-vim 'session'
+set -g @continuum-restore 'on'
+# vim: set shiftwidth=4 softtabstop=4 expandtab tw=120 foldlevel=0
