--- a/tmux.conf
+++ b/tmux.conf
@@ -61,14 +61,16 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-battery'
 
 # theme
-set -g @plugin 'nordtheme/tmux'
+# set -g @plugin 'nordtheme/tmux'
+set -g @plugin 'egel/tmux-gruvbox'
+
+set -g @tmux-gruvbox 'dark'
 # set -g @plugin 'trevarj/tmux-open-nvim'
 # set -g @plugin 'jimeh/tmux-themepack'
 # }}}
