--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -7,16 +7,16 @@ window:
 
 font:
   normal:
-    family: SauceCodePro Nerd Font
+    family: MesloLGS NF
     style: Regular
   bold:
-    family: SauceCodePro Nerd Font
+    family: MesloLGS NF
     style: Bold
   italic:
-    family: SauceCodePro Nerd Font
+    family: MesloLGS NF
     style: Italic
   bold_italic:
-    family: SauceCodePro Nerd Font
+    family: MesloLGS NF
     style: Bold Italic
   size: 9.5
 
